--- a/main.css
+++ b/main.css
@@ -1,23 +1,89 @@
-h2 {
-    font-size: 32;
-    text-align: center;
-    font-family: sans-serif;
+body {
+  font-family: sans-serif;  
+    min-width: 1024px;
 }
 
-h4 {
-    font-size: 16;
+#title {
+    font-size: 32;
     text-align: center;
-    font-family: sans-serif;
+}
+
+#filechoosearea {
+    width: 400px;
+    min-width: 400px;
+    float: left;
+}
+
+#filedroparea {
+    border: 2px dashed #bbb;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    padding: 25px;
+    text-align: center;
+    color: #bbb;
 }
 
 #filechooser {
     text-align: center;
-    font-family: sans-serif;
+}
+
+#description {
+    font-size: 12;
+    margin: 0 405px; 
+    padding-top: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 10px;
+    min-width: 300px;
+    min-height: 162px;
+}
+
+#basicinfo {
+    font-size: 12;
+    width: 300px;
+    min-width: 300px;
+    float: right;
+    padding-top: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 10px;
+    border: solid;
 }
 
 #filedisplay {
-    text-align: left;
-    font-family: sans-serif;
+    font-size: 12;
+    width: 400px;
+    min-width: 400px;
+    float: right;
+    padding-top: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 10px;
+    border: solid;
+    min-height: 400px;
+    text-align: center;
+}
+
+#tree {
+    margin-left: 305px;
+    margin-right: 410px;
+    padding-top: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 10px;
+    min-width: 290px;
+    min-height: 400px;
+    height: 400px;
+    text-align: center;
+}
+
+#controls {
+    width: 300px;
+    min-width: 300px;
+    float: left;
+    min-height: 400px;
+    text-align: center;
 }
 
 #videodisplay {
@@ -27,6 +93,20 @@ h4 {
 .imgdisplay {
     max-width:400px;
     max-height:400px;
+}
+
+#binarydata {
+    min-width: 900px;
+    min-height: 400px;
+    width: 900px;
+    height: 400px;
+    text-align: center;
+    margin: auto;
+}
+
+#footer {
+    text-align: center;
+    font-size: 11;
 }
 
 
