--- a/main.css
+++ b/main.css
@@ -83,7 +83,17 @@ body {
     min-width: 300px;
     float: left;
     min-height: 400px;
-    text-align: center;
+    text-align: left;
+    padding-left: 6px;
+    padding-right: 6px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    border: solid;
+}
+
+#bytepostext {
+    width: 100px;
+    min-width: 100px;
 }
 
 #videodisplay {
