--- a/main.css
+++ b/main.css
@@ -81,6 +81,7 @@ body {
     padding-bottom: 6px;
     border: solid;
     overflow: scroll;
+    font-size: 12;
 }
 
 #bytepostext {
@@ -115,6 +116,3 @@ body {
     font-size: 11;
     
 }
-
-
-
