--- a/main.css
+++ b/main.css
@@ -9,9 +9,14 @@ body {
 }
 
 #filechoosearea {
-    width: 400px;
-    min-width: 400px;
-    float: left;
+    font-size: 12;
+    margin: 0 405px; 
+    padding-top: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 10px;
+    min-width: 300px;
+    min-height: 162px;
 }
 
 #filedroparea {
@@ -24,19 +29,20 @@ body {
     color: #bbb;
 }
 
-#filechooser {
-    text-align: center;
+#thefile {
+    display: none;
 }
 
 #description {
     font-size: 12;
-    margin: 0 405px; 
     padding-top: 10px;
     padding-left: 5px;
     padding-right: 5px;
     padding-bottom: 10px;
-    min-width: 300px;
     min-height: 162px;
+    width: 400px;
+    min-width: 400px;
+    float: left;
 }
 
 #basicinfo {
@@ -48,7 +54,6 @@ body {
     padding-left: 5px;
     padding-right: 5px;
     padding-bottom: 10px;
-    border: solid;
     overflow: scroll;
 }
 
@@ -74,7 +79,7 @@ body {
     width: 330px;
     min-width: 330px;
     float: left;
-    min-height: 520px;
+    min-height: 320px;
     text-align: left;
     padding-left: 6px;
     padding-right: 6px;
@@ -103,13 +108,15 @@ body {
     margin-left: 335px;
     margin-right: 410px;
     padding-top: 10px;
-    padding-left: 5px;
+    padding-left: 20px;
     padding-right: 5px;
     padding-bottom: 10px;
     min-width: 470px;
     min-height: 320px;
     height: 320px;
-    text-align: center;
+    text-align: left;
+    font-size: 12;
+    line-height: 210%;
 }
 
 #header {
