--- a/main.css
+++ b/main.css
@@ -8,6 +8,35 @@ body {
     text-align: center;
 }
 
+#header {
+    text-align: center;
+    font-size: 11;
+}
+
+#basicinfo {
+    font-size: 12;
+    width: 300px;
+    min-width: 300px;
+    float: right;
+    padding-top: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 10px;
+    overflow: scroll;
+}
+
+#description {
+    font-size: 12;
+    padding-top: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 10px;
+    min-height: 162px;
+    width: 400px;
+    min-width: 400px;
+    float: left;
+}
+
 #filechoosearea {
     font-size: 12;
     margin: 0 405px; 
@@ -33,30 +62,6 @@ body {
     display: none;
 }
 
-#description {
-    font-size: 12;
-    padding-top: 10px;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-bottom: 10px;
-    min-height: 162px;
-    width: 400px;
-    min-width: 400px;
-    float: left;
-}
-
-#basicinfo {
-    font-size: 12;
-    width: 300px;
-    min-width: 300px;
-    float: right;
-    padding-top: 10px;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-bottom: 10px;
-    overflow: scroll;
-}
-
 #filedisplay {
     font-size: 12;
     width: 400px;
@@ -71,11 +76,11 @@ body {
     text-align: center;
 }
 
-#tree {
-    margin-top:10px;
+#videodisplay {
+    width: 400;
 }
 
-#controls {
+#treecontrols {
     width: 330px;
     min-width: 330px;
     float: left;
@@ -90,13 +95,13 @@ body {
     font-size: 12;
 }
 
+#tree {
+    margin-top:10px;
+}
+
 #bytepostext {
     width: 100px;
     min-width: 100px;
-}
-
-#videodisplay {
-    width: 400;
 }
 
 .imgdisplay {
@@ -117,10 +122,4 @@ body {
     text-align: left;
     font-size: 12;
     line-height: 210%;
-}
-
-#header {
-    text-align: center;
-    font-size: 11;
-    
 }
