--- a/main.css
+++ b/main.css
@@ -122,3 +122,8 @@ body {
     font-family: monospace;
     text-align: center;
 }
+
+.selectedByte {
+    color: white;
+    background-color: black;
+}
